--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@ionic/react": "^7.0.5",
     "@react-three/drei": "^9.66.1",
     "@react-three/fiber": "^8.13.0",
-    "@react-three/postprocessing": "^2.10.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "three": "^0.152.2",
+    "vercel": "^29.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
